fix sawmill table width, fix fmu map page on mobile

--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -31,10 +31,6 @@ $legend_component: 'vizzuality';
         border: none;
       }
     }
-
-    .#{$legend_component}__c-legend-list {
-      max-height: none;
-    }
   }
 
   .#{$legend_component}__c {
