--- a/css/components/map/_map.scss
+++ b/css/components/map/_map.scss
@@ -16,7 +16,7 @@
   z-index: 1;
 
   &.-static {
-    height: 860px;
+    height: 960px;
     max-height: 95vh;
   }
 
