--- a/css/components/page/_section.scss
+++ b/css/components/page/_section.scss
@@ -14,6 +14,12 @@
     flex: 1;
   }
 
+  &.-sm-flex-column {
+    @include breakpoint(small only) {
+      flex-direction: column;;
+    }
+  }
+
   &.-relative {
     position: relative;
   }
